Better colors for error message

--- a/snx-rs-gui/assets/app.css
+++ b/snx-rs-gui/assets/app.css
@@ -19,5 +19,5 @@ entry text placeholder {
     padding: 6px;
     border: 1px solid #f44336;
     color: #ffffff;
-    background-color: #AF0606;
+    background-color: rgba(175, 6, 6, 0.2);
 }
